--- a/csen60-lab6/package.json
+++ b/csen60-lab6/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
-    "hono": "^4.6.9"
+    "hono": "^4.6.9",
+    "serve-static": "^1.16.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
